ca.teamdman.cluster/kubernetes/ca-teamdman-www/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - teamdman.ca
      secretName: teamdman-tls
  rules:
    - host: teamdman.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
